[package]
name = "obs-websockets"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
url = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sha2 = "*"
base64 = "*"
